# tap-lightcast

./: README.md  config.json  meltano.yml  pyproject.toml  state.json  tap-lightcast.sh
tap-lightcast/: config.json  meltano.yml  pyproject.toml  tap-lightcast.sh
tap-lightcast/tap_lightcast/: streams.py  tap.py
tap_lightcast/: streams.py  tap.py
