[tool.poetry]
name = "tap-lightcast"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "tap_lightcast"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
singer-sdk = "0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-lightcast = 'tap_lightcast.tap:cli'
